--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <artifactId>CurrencyConverter_shivangi</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
+  <classifier>${BUILD_NUMBER}</classifier>
   <name>CurrencyConverter Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
