--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>sim</groupId>
-  <artifactId>CurrencyConverter_POC</artifactId>
+  <artifactId>CurrencyConverter</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>CurrencyConverter Maven Webapp</name>
@@ -16,6 +16,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>CurrencyConverter_POC</finalName>
+    <finalName>CurrencyConverter</finalName>
   </build>
 </project>
